# page-loader

./: .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
page_loader/: __init__.py  app.py  logger.py  parser.py
page_loader/lib/: __init__.py  args_parser.py  errors.py  log_level.py  page.py
page_loader/scripts/: __init__.py  page_loader.py
tests/: filename_test.py  page_loader_test.py
tests/fixtures/: application1.js  application2.css  application2.js  expected.html  with_assets_after.html  with_assets_before.html  without_assets_after.html
